@@ -2,7 +2,7 @@ This directory contains the Simple Python Fixed-Point Module
 
 All files are released under the Python PSF License
 (see http://www.python.org/psf/license)
-and are Copyright 2006-2008 RW Penney.
+and are Copyright 2006-2009 RW Penney.
 
 The package comes with NO WARRANTY, and NO CLAIMS OF FITNESS FOR ANY PURPOSE.
 However, the author welcomes *constructive* feedback
