@@ -12,11 +12,9 @@ from FixedPoint import FXnum, FXfamily, \
 class FixedPointTest(unittest.TestCase):
     def setUp(self):
         pass
-        #print "setting up"
 
     def tearDown(self):
         pass
-        #print "tearing down"
 
     def testLongRounding(self):
         """long-integers should round towards minus infinity"""
@@ -288,7 +286,7 @@ class FixedPointTest(unittest.TestCase):
             fam = FXfamily(16, top)
             a = FXnum(1.0/16.01, fam)
             zero = FXnum(0, fam)
-            limit = 1 << (top + 4 - 1)
+            limit = 1 << (top + 4 - 1)  # Unlikely to be valid FXnum(,fam)
 
             cnt, x, y = 0, zero, zero
             while cnt < (limit + 5):
@@ -306,17 +304,6 @@ class FixedPointTest(unittest.TestCase):
                 else:
                     if cnt > limit: self.fail()
 
-            try: x = zero + a * limit
-            except FXoverflowError: self.fail()
-            try: x = zero + a * (limit + 1)
-            except FXoverflowError: pass
-            else: self.fail()
-
-            try: x = zero - a * limit
-            except FXoverflowError: self.fail()
-            try: x = zero - a * (limit + 1)
-            except FXoverflowError: pass
-            else: self.fail()
 
     def testSqrt(self):
         """sqrt method should find square-roots"""
